<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="name_hint">Masukkan nama Anda</string>
    <string name="pw_hint">Masukkan password Anda</string>
    <string name="story">Cerita</string>
    <string name="description">Deskripsi</string>
    <string name="language">Bahasa</string>
    <string name="upload">Upload</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="yeah">Yeah!</string>
    <string name="no">Tidak!</string>
    <string name="msg_login_s">Anda berhasil login!</string>
    <string name="msg_login_e">"Gagal login.\n""Cek Email dan password kamu!"</string>
    <string name="msg_signup_s">Akun Anda sudah berhasil terbuat!</string>
    <string name="msg_signup_e">Akun Anda gagal terbuat.</string>
    <string name="positive_btn">Lanjut</string>
    <string name="positive_btn_e">Oke</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="pw_not_valid">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="email_hint">Masukkan Email Anda</string>
    <string name="image">Image</string>
    <string name="no_media">Tidak ada media yang dipilih</string>
    <string name="permission_s">Izin diberikan</string>
    <string name="permission_e">Izin tidak diberikan</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Peta</string>
    <string name="retry">Coba Lagi</string>
    <string name="location">Lokasi</string>
    <string name="mapStyle_e">Gagal memuat gaya peta</string>

</resources>