<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorBackgroundFloating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.storydetail.StoryDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            app:title="@string/story"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_photo"
        android:src="@drawable/ic_place_holder"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        android:scaleType="center"
        android:transitionName="iv_photo"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_name"
        app:shapeAppearanceOverlay="@style/Rounded"/>

    <TextView
        android:id="@+id/tv_story_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="@color/black"

        android:drawablePadding="6dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="tv_story_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/tv_story_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:transitionName="tv_story_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_story_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />



</androidx.constraintlayout.widget.ConstraintLayout>